@@ -19,6 +19,8 @@ interface:
 Makefile:
 - revise sub-makefiles for MSVC on MinGW
 - fix bug in 'dll' target
+- make shared libraries aware of their dependencies
+- link binary to shared libs when compiling with SHARED=true
 
 SCIP version 3.2.1
 ==================
